Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 4.8.0, 5.0.0
-
Fix Version/s: 5.2.0
-
Component/s: GUI: Font handling, GUI: Text handling
-
Labels:None
-
Environment:OpenSuSE 12.3 x64
-
Commits:a15b56b0c1eae0d368c16be2d81bba11cb1faee7
Description
QTextEngine crashes for some characters (ones not common in fonts) in case when fallback font families list consist of more than 255 entries.
Could be reproduced with the following code:
for(int b1 = 10;b1 < 300;b1++)
This causes SIGSEGV in QtextEngine::shapeTextWithHarfbuzz() at line
"si.ascent = qMax(actualFontEngine->ascent(), si.ascent);"
due to actualFontEngine==0.
Attachments
Issue Links
- relates to
-
QTBUG-38357 QApplication gives assertion while parsing '/usr/share/X11/locale/iso8859-1/Compose' in debug release with LANG=C
-
- Closed
-
For Gerrit Dashboard: QTBUG-30412 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
53723,1 | Fix possible crash due to integer overflow | stable | qt/qtbase | Status: ABANDONED | -1 | 0 |